src/main/java/example/com/exceptions/response/error/Application.java
package example.com.exceptions.response.error;

import io.micronaut.runtime.Micronaut;

public class Application {

    public static void main(String[] args) {
        Micronaut.run(Application.class, args);
    }
}